[gd_scene load_steps=13 format=2]

[ext_resource path="res://Sprites/TentacleHalf.png" type="Texture" id=1]
[ext_resource path="res://Art/menuBackground.png" type="Texture" id=3]
[ext_resource path="res://Sprites/TentacleFull.png" type="Texture" id=4]
[ext_resource path="res://Art/UI/MenuUI/menuButtonHovered.png" type="Texture" id=5]
[ext_resource path="res://Art/UI/MenuUI/menuButtonPressed.png" type="Texture" id=6]
[ext_resource path="res://Art/UI/MenuUI/menuButton.png" type="Texture" id=7]
[ext_resource path="res://Font/BAHNSCHRIFT.TTF" type="DynamicFontData" id=8]
[ext_resource path="res://Scenes/Death.gd" type="Script" id=9]
[ext_resource path="res://Sounds/Other Sounds/select.wav" type="AudioStream" id=10]

[sub_resource type="Animation" id=1]
resource_name = "tentacleDeath"
tracks/0/type = "value"
tracks/0/path = NodePath("TentacleFull:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 40.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TentacleFull:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 219, -111 ), Vector2( 219, 100 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TentacleHalf:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 35.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("TentacleHalf:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 840, 834 ), Vector2( 840, 600 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("TentacleHalf2:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1015, -50 ), Vector2( 1015, 350 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("TentacleHalf3:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -45, 564 ), Vector2( 250, 564 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("TentacleFull2:rotation_degrees")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -120.0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("TentacleFull2:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 551, 857 ), Vector2( 551, 750 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("CenterContainer/VBoxContainer/VBoxContainer:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 8 )

[node name="Death" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 3 )

[node name="TentacleFull" type="Sprite" parent="."]
position = Vector2( 219, -111 )
scale = Vector2( 30, 30 )
texture = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/tentacleDeath = SubResource( 1 )

[node name="TentacleHalf" type="Sprite" parent="."]
position = Vector2( 840, 834 )
scale = Vector2( 30, 30 )
texture = ExtResource( 1 )
flip_h = true
flip_v = true

[node name="TentacleHalf2" type="Sprite" parent="."]
position = Vector2( 1015, -50 )
rotation = 1.5708
scale = Vector2( 30, 30 )
texture = ExtResource( 1 )

[node name="TentacleHalf3" type="Sprite" parent="."]
position = Vector2( -45, 564 )
scale = Vector2( 30, 30 )
texture = ExtResource( 1 )

[node name="TentacleFull2" type="Sprite" parent="."]
position = Vector2( 551, 857 )
scale = Vector2( 30, 30 )
texture = ExtResource( 4 )
flip_v = true

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 515.0
margin_top = 290.0
margin_right = 765.0
margin_bottom = 429.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 250.0
margin_bottom = 139.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/VBoxContainer"]
margin_right = 250.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 4 )
text = "You perished!"
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer/VBoxContainer"]
margin_top = 45.0
margin_right = 250.0
margin_bottom = 85.0
rect_min_size = Vector2( 0, 40 )

[node name="TextureButton" type="TextureButton" parent="CenterContainer/VBoxContainer/VBoxContainer"]
margin_top = 89.0
margin_right = 250.0
margin_bottom = 139.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 5 )
texture_disabled = ExtResource( 6 )

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/VBoxContainer/TextureButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 5.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 5 )
text = "RETRY"
align = 1
valign = 1
uppercase = true

[node name="menuSelect" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[connection signal="button_down" from="CenterContainer/VBoxContainer/VBoxContainer/TextureButton" to="." method="_on_TextureButton_button_down"]
[connection signal="button_up" from="CenterContainer/VBoxContainer/VBoxContainer/TextureButton" to="." method="_on_TextureButton_button_up"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/VBoxContainer/TextureButton" to="." method="_on_TextureButton_mouse_entered"]
[connection signal="mouse_exited" from="CenterContainer/VBoxContainer/VBoxContainer/TextureButton" to="." method="_on_TextureButton_mouse_exited"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/VBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
